<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_name">RashIO</string>
    <!-- fragment - Login & Register -->
    <string name="login">Login</string>
    <string name="login_info">Silahkan login untuk menggunakan aplikasi</string>
    <string name="no_acc">Belum punya akun?</string>
    <string name="regis">Register</string>
    <string name="regis_info">Silahkan mendaftar untuk membuat akun</string>
    <string name="have_acc">Sudah punya akun?</string>

    <string name="email">E - mail</string>
    <string name="name">Nama</string>
    <string name="psswrd">Password</string>
    <string name="no_hp">No. Hp</string>

    <!-- fragment - Beranda -->
    <!-- Bottom Navigation -->
    <string name="title_home">Beranda</string>
    <string name="title_camera">Deteksi</string>
    <string name="title_profile">Profil</string>

    <string name="title_item_list">Artikel</string>
    <string name="greetings">Halo, %s\nSelamat Datang di RashIO</string>
    <string name="title">Kenali Lebih Dalam Penyebab Eksim pada Bayi dan Pengobatannya</string>
    <string name="ph_author">Ditinjau oleh: </string>
    <string name="save_bookmark">Save Bookmark?</string>

    <!-- fragment - Detail Artikel -->
    <string name="published_data">Terakhir Diperbarui: </string>
    <string name="reference_link">Referensi</string>
    <string name="author">Dr. Fulan</string>
    <string name="item_author"><u>by Dr. Fulan</u></string>
    <string name="description">Dermatitis numularis adalah penyakit kulit yang lebih sering dialami pria dibanding wanita, dan biasanya muncul di usia 55–65 tahun. Kondisi dermatitis numularis biasanya muncul setelah adanya kerusakan pada permukaan kulit akibat\n\nbeberapa pemicu, seperti luka bakar, gesekan, atau bahkan gigitan serangga. Dermatitis numularis adalah penyakit kulit yang lebih sering dialami pria dibanding wanita, dan biasanya\n\nmuncul di usia 55–65 tahun. Kondisi dermatitis numularis biasanya muncul setelah adanya kerusakan pada permukaan kulit akibat beberapa pemicu, seperti luka bakar, gesekan, atau bahkan gigitan serangga. </string>

    <!-- fragment - Detection   -->
    <string name="detection_title">Deteksi</string>
    <string name="start_detect">Mulai Deteksi</string>
    <string name="gallery">Galeri</string>
    <string name="camera">Kamera</string>
    <string name="description_input">Masukkan gambar yang ingin anda deteksi</string>

    <!-- fragment - Detection   -->
    <string name="resultdetect_title">Hasil Deteksi</string>
    <string name="result">Panu</string>
    <string name="accurate">Akurasi:</string>
    <string name="percentage">90%</string>

    <string name="description_title"><u>Deskripsi</u></string>
    <!--    <string name="description">Dermatitis numularis adalah penyakit kulit yang lebih sering dialami pria dibanding wanita, dan biasanya muncul di usia 55–65 tahun. Kondisi dermatitis numularis biasanya muncul setelah adanya kerusakan pada permukaan kulit akibat beberapa pemicu, seperti luka bakar, gesekan, atau bahkan gigitan serangga. Dermatitis numularis adalah penyakit kulit yang lebih sering dialami pria dibanding wanita, dan biasanya muncul di usia 55–65 tahun. Kondisi dermatitis numularis biasanya muncul setelah adanya kerusakan pada permukaan kulit akibat beberapa pemicu, seperti luka bakar, gesekan, atau bahkan gigitan serangga.</string>-->
    <string name="antidote"><u>Pengobatan Penyakit</u></string>
    <string name="antidote_description">Mandi 1–2x sehari dengan menggunakan air hangat kuku (suhu 36–37 derajat Celcius).\n\nMandi 1–2x sehari dengan menggunakan air hangat kuku (suhu 36–37 derajat Celcius).</string>


    <!-- fragment - Profile -->
    <string name="profile_title">Profil</string>
    <string name="username">Nama Pengguna</string>
    <string name="user_mail">emailpengguna@gmail.com</string>
    <string name="user_handphone">083423454453</string>
    <string name="password_confirmation">Password Confirmation</string>

    <string name="hello_blank_fragment">hello from blank</string>
    <string name="article_title">Artikel</string>
    <string name="by">by</string>
    <string name="tab_text_1">Riwayat Deteksi</string>
    <string name="tab_text_2">Bookmark</string>


</resources>