<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".ui.main.register.RegisterFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/rgst_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/regis"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/dark_brown"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="80dp" />

    <TextView
        android:id="@+id/text_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/regis_info"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/rgst_title" />

    <EditText
        android:id="@+id/rgst_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:lines="1"
        android:text="@string/name"
        android:textColor="@color/faded_text_color"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/text_info"/>

    <EditText
        android:id="@+id/rgst_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number|textEmailAddress"
        android:lines="1"
        android:text="@string/email"
        android:textColor="@color/faded_text_color"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/rgst_name" />

    <EditText
        android:id="@+id/rgst_psswrd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:lines="1"
        android:text="@string/psswrd"
        android:textColor="@color/faded_text_color"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/rgst_email" />

    <EditText
        android:id="@+id/rgst_no_hp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number|phone"
        android:lines="1"
        android:text="@string/no_hp"
        android:textColor="@color/faded_text_color"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/rgst_psswrd" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regis"
        android:textAllCaps="false"
        android:background="@drawable/ic_round_btn"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/rgst_no_hp" />

    <TextView
        android:id="@+id/ask_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_acc"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="80dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_save"
        app:layout_constraintStart_toStartOf="@id/btn_save"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/brown"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@id/ask_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_save" />

</androidx.constraintlayout.widget.ConstraintLayout>