<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.detailartikel.DetailArtikelFragment">

    <!-- TODO: Update blank fragment layout -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/layoutTopAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/detection_title"
            app:titleTextColor="@color/dark_brown"
            android:background="@color/white"
            app:navigationIcon="@drawable/back_button"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/image_article"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:src="@color/faded_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_title_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_brown"
        android:textSize="30sp"
        android:text="@string/title"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintTop_toBottomOf="@id/image_article"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_published_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:textColor="@android:color/black"
        android:text="@string/published_data"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_item"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:textColor="@android:color/black"
        android:text="@string/author"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/tv_published_item"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_reference_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:textColor="@android:color/black"
        android:text="@string/reference_link"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/tv_author"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:lineSpacingMultiplier="1"
        android:text="@string/content_text"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_reference_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>